# slam_mqtt_server

./: .gitignore  GITHUB_SETUP.md  README.md  docker-compose.yml  package.xml  requirements.txt  setup.cfg  setup.py  start_monitoring.sh
config/: grafana_dashboard.json  telegraf.conf
config/grafana/provisioning/dashboards/: default.yml
config/grafana/provisioning/datasources/: influxdb.yml
config/mosquitto/: mosquitto.conf
docs/: DATA_EXCHANGE_GUIDE.md  ICP_ALGORITHM_GUIDE.md  WEB_RVIZ_GUIDE.md
launch/: nav2_rviz.launch.py  pinky_server.launch.py  slam_rviz.launch.py  unified.launch.py  web_console.launch.py  web_rviz.launch.py
resource/: slam_mqtt_server
rviz/: nav2_view.rviz  slam_view.rviz  unified_view.rviz
scripts/: setup_monitoring.sh  setup_web_rviz.sh
scripts/web/: index.html
slam_mqtt_server/: __init__.py  ai_vision_analyzer.py  config.py  nav2_map_builder.py  nav2_web_server.py  plc_simulator.py  server_mqtt_bridge.py  unified_server.py  web_rviz_bridge.py
